Fixed x-overflow on mobile

--- a/src/Pages/MathSeminarPaper/Mastermind.module.css
+++ b/src/Pages/MathSeminarPaper/Mastermind.module.css
@@ -1,3 +1,7 @@
+.boardContainer {
+  overflow-x: scroll;
+}
+
 .board {
   background-color: #000080;
   border: 3px solid #ccf;
@@ -76,7 +80,12 @@
   margin: 0;
 }
 
-.wordGrid {
+.solutionSpaceGridContainer {
+  overflow-x: scroll;
+  width: 100%;
+}
+
+.solutionSpaceGrid {
   display: grid;
   /* grid-template-columns: repeat(4, 1fr); 
       Controlled by component in React*/
@@ -85,7 +94,7 @@
   gap: 0.5rem;
 }
 
-.solutionSpaceGrid {
+.solutionSpaceGrid .solution {
   display: flex;
   border: 1px solid #eef;
   background-color: #000080;
@@ -95,6 +104,6 @@
   border-radius: 100px;
 }
 
-.solutionSpaceGrid.ruledOut {
+.solutionSpaceGrid .solution.ruledOut {
   opacity: 0.15;
 }
